[package]
name = "dsmr-reader"
version = "0.1.0"
authors = ["sanderphilipse <sander.philipse@essent.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
chrono = "0.4.11"
influx_db_client = "^0.4.0"
